# patch

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  IDEA.md  PROGRESS.md  README.md
source/: CMakeLists.txt  CircularArray.h  ConnectionParameters.h  Core.cpp  Core.h  Instance.cpp  Instance.h  Logger.cpp  Logger.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Singleton.h
tests/: CMakeLists.txt  CircularTest.h  HelloTest.h  TestRunner.cc
